--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@
                                         <li class="list-group-item d-flex justify-content-between align-items-center">
                                             <div> <span class="badge badge-success badge-pill">GET</span> <span
                                                     class="text-muted pl-3">/refresh</span>/token <span
-                                                    class="mx-3">Refresh token after reset App page</span></div>
+                                                    class="mx-3">Refresh token after  30 minutes</span></div>
                                         </li>
 
                                 </div>
