--- a/public/index.html
+++ b/public/index.html
@@ -106,13 +106,13 @@
                             <li class="list-group-item d-flex justify-content-between align-items-center">
                                 <a data-toggle="collapse" href="#logout" role="button" aria-expanded="false"
                                     aria-controls="logout">/logout</a>
-                                <span class="badge badge-primary badge-pill">POST</span>
+                                <span class="badge badge-warning badge-pill">PATCH</span>
                             </li>
                             <div class="collapse multi-collapse" id="logout">
                                 <div class="card card-body">
                                     <ul class="list-group">
                                         <li class="list-group-item d-flex justify-content-between align-items-center">
-                                            <div><span class="badge badge-primary badge-pill">POST</span><span
+                                            <div><span class="badge badge-warning badge-pill">PATCH</span><span
                                                     class="text-muted pl-3">/login</span>/<span class="mx-3">Logout from
                                                     the service</span> </div>
                                         </li>
